Fixed overflow on mobile startpage for movies lists, added favicon to all html sites

--- a/src/sections/movies-startsida.scss
+++ b/src/sections/movies-startsida.scss
@@ -23,15 +23,15 @@
   display: flex;
   flex-direction: row;
 
-  h1 {
+  .index-title {
     color: $second-color;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
     margin: 1.5rem 1.5rem 1.5rem 0;
     width: 100%;
   }
   h2 {
     color: $second-color;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
     width: 20vw;
     margin: 1rem 1rem 1rem 0;
     padding: 0.5rem;
@@ -41,15 +41,23 @@
 
 @media screen and (max-width: $breaking-point) {
   .show-movies {
-    max-width: 100%;
-    width: 100%;
-  }
-  .list-styling {
-    max-width: 100%;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    li {
-      margin: 0.5rem;
+    .movies-lists-container {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+    }
+    .index-title {
+      width: 90vw;
+    }
+
+    .list-styling {
+      max-width: 100%;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      li {
+        margin: 0.5rem;
+      }
     }
   }
 }
